Updated project files

--- a/clientlogin.html
+++ b/clientlogin.html
@@ -15,16 +15,16 @@
             <span class="logo-text">GigConnect</span>
         </a>
         </div>
-            <ul class="nav-link">
-                <li><a href="#">How It Works</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="contactus.html">Contact us</a></li>
-            </ul>
+        <ul class="nav-link">
+            <li><a href="howitworks.html" class="work">How It Works</a></li>
+            <li><a href="findHelpNow.html" class="Help">Services</a></li>
+            <li><a href="contactus.html" class="contact">Contact us</a></li>
+        </ul>
             <div class="nav-buttons">
                 <div class="dropdown">
                     <button class="Login-btn">Login</button>
                     <div class="dropdown-content">
-                        <a href="client-login.html">Login as Client</a>
+                        <a href="clientlogin.html">Login as Client</a>
                         <a href="pro-login.html">Login as Professional</a>
                     </div>
                 </div>
