--- a/registeraspro.html
+++ b/registeraspro.html
@@ -17,16 +17,16 @@
                 </a>
             </div>
             <ul class="nav-link">
-                <li><a href="#">How It Works</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="howitworks.html" class="work">How It Works</a></li>
+                <li><a href="findHelpNow.html" class="Help">Services</a></li>
+                <li><a href="contactus.html" class="contact">Contact us</a></li>
             </ul>
             <div class="nav-buttons">
                 <div class="dropdown">
                     <button class="Login-btn">Login</button>
                     <div class="dropdown-content">
-                        <a href="client-login.html">Login as Client</a>
-                        <a href="pro-login.html">Login as Professional</a>
+                        <a href="clientlogin.html">Login as Client</a>
+                        <a href="professionallogin.html">Login as Professional</a>
                     </div>
                 </div>
                 <a href="signup.html" class="Signup-btn">Sign up</a>
