--- a/signup.html
+++ b/signup.html
@@ -15,11 +15,11 @@
             <span class="logo-text">GigConnect</span>
         </a>
         </div>
-            <ul class="nav-link">
-                <li><a href="#">How It Works</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="contactus.html">Contact us</a></li>
-            </ul>
+        <ul class="nav-link">
+            <li><a href="howitworks.html" class="work">How It Works</a></li>
+            <li><a href="findHelpNow.html" class="Help">Services</a></li>
+            <li><a href="contactus.html" class="contact">Contact us</a></li>
+        </ul>
             <div class="nav-buttons">
                 <div class="dropdown">
                     <button class="Login-btn">Login</button>
